[tool.poetry]
name = "CodeMonkey"
version = "1.0.0"
description = "code monkey get up get coffee, code monkey go to job."
authors = ["Kokonico <kokonico@duck.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"